# Workshop-Maldev

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  meterpreter.rs
crates/core/src/packer/: mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  win_types.rs
crates/workshop-agent/: Cargo.toml
crates/workshop-agent/src/: lib.rs
crates/workshop-agent/src/agent/: mod.rs
crates/workshop-agent/src/agent/capabilities/: placeholder.rs
crates/workshop-agent/src/agent/core/: config.rs  meterpreter_winapi.rs  mod.rs  runtime.rs  sleep.rs  tasking.rs
crates/workshop-agent/src/agent/transport/: http_winhttp.rs  mod.rs  traits.rs
crates/workshop-server/: Cargo.toml
crates/workshop-server/src/: main.rs
crates/workshop-server/src/listener/: http.rs
crates/workshop-server/src/operator/: mod.rs
crates/workshop-server/src/tasking/: mod.rs  state.rs
